# sageleaf

./: .clang-format  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  ast.dot  build.sh  check.sh  code.sl  code.sl.md  code2.sl  go.mod  hello.sl  interfaces.sl  json-thoughts.md  lexer.go  main.go  ols.json  parser.go  pyproject.toml  run.sh  sage.c  sage.sl  setup.py  test.py
ast/: ast.go
codegen/: codegen.go  codegen_test.go
docs/: composite-types.md  grammar.ebnf  hello_world.sl  json-thoughts.md  low-level.md  primitive-types.md  types.ebnf  untagged-unions.md
elf/: elf.go
examples/: 01-math.sl  02-seqential-add.sl  03-mult-add.sl  04-add-mult.sl  05-parens-add-mult.sl  07-big-math.sl  addition.sl  code.sl  math.sl
experiments/: ast.dot
formatter/: formatter.go
lexer/: lexer.go  lexer_test.go
parser/: parser.go  parser_test.go
qbe/: hello.ssa
runtime/: core.c  lib.sl
sage/: .gitignore  Cargo.toml  build.sh  build.zig  go.mod  interpreter.fs  lexer.fs  lexer.go  lexer.rs  main.fs  main.go  main.rs  parser.fs  repl.fs  run.sh  sage.fsproj  types.fs
sage-c/: run.sh
sage-cpp/: run.sh
sage-fsharp/: build.sh  example.sl  parser.fs  run.sh  sage.fsproj  types.fs
sage-go/: main.go  parser.go
sage_f#/: .gitignore  fizzbuzz.sl
sagec/: .gitignore  Cargo.toml
sageleaf/: compile.py  lex.py  main.py  parse.py  tokens.py
sageleaf-syntax-highlighting/: CHANGELOG.md  README.md  dev.sh  language-configuration.json  package.json  vsc-extension-quickstart.md
src/: lexer.c  main.c  parser.c  sage.h
symbols/: symbols.go
test/: return_2.sl  (+11 more)
(+90 files in other folders)
